<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/title_view"
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14pt"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/activity_main_title"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            style="?android:attr/progressBarStyleHorizontal"/>
        <TextView
            android:id="@+id/progress_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_gravity="right"
            android:text="0%"
            android:textSize="10pt"/>
        <Button
            android:id="@+id/button"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_button"
            android:textSize="12pt"/>
		<Button
            android:id="@+id/infoButton"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_versioninfo_title"
            android:textSize="12pt"/>
		
    </LinearLayout>

</LinearLayout>